--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-game-engine": "^1.2.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
